--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 
 </head>
 <body>
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+    <h4>Result :</h4>
+    <div id="result"></div>
+    <h4>Score Board :</h4>
+    <div id="scoreBoard1"></div>
+    <div id="scoreBoard2"></div>
+    <div id="scoreBoard3"></div>
     <script src="app.js"></script>
 </body>
 </html>
